[gd_scene load_steps=12 format=3 uid="uid://p5dbxojquqx7"]

[ext_resource type="PackedScene" uid="uid://d1fmiyohrjemf" path="res://Scenes/menu_cursor.tscn" id="1_bvyhp"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_emj22"]
[ext_resource type="PackedScene" uid="uid://ccnhdyebg8fjt" path="res://tile_map.tscn" id="1_x4rro"]
[ext_resource type="Script" path="res://Scripts/menu_item.gd" id="2_7f7bd"]
[ext_resource type="Texture2D" uid="uid://b2im5mo618535" path="res://Assets/cup.png" id="4_mg7x7"]
[ext_resource type="Texture2D" uid="uid://xf2p8sn7d356" path="res://Assets/keyboard/ARROWUP.png" id="5_b48hc"]
[ext_resource type="Texture2D" uid="uid://wvcaqh1118rj" path="res://Assets/keyboard/ARROWDOWN.png" id="6_1j7c7"]
[ext_resource type="Texture2D" uid="uid://c76vvsj7yhyxr" path="res://Assets/keyboard/ARROWLEFT.png" id="7_47ekk"]
[ext_resource type="Texture2D" uid="uid://cg23de2wy3cnc" path="res://Assets/keyboard/ARROWRIGHT.png" id="8_7gyq4"]
[ext_resource type="PackedScene" uid="uid://cdm4d0qsovhxl" path="res://Scenes/next_step_indicator.tscn" id="9_h56ag"]
[ext_resource type="Texture2D" uid="uid://brtcleprw67bb" path="res://Assets/CatsBlack16x16Tile.png" id="10_6dfsk"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emj22")

[node name="Level 1" parent="." instance=ExtResource("1_x4rro")]
layer_1/tile_data = PackedInt32Array(131076, 786435, 4, 196612, 786435, 1, 262148, 786435, 2, 327684, 786435, 3, 393220, 786435, 4, 458756, 786435, 1, 524292, 786435, 2, 589828, 786435, 3, 655364, 786435, 4, 720900, 786435, 1, 131077, 589827, 4, 196613, 589827, 1, 262149, 589827, 2, 327685, 589827, 3, 393221, 589827, 4, 458757, 589827, 1, 524293, 589827, 2, 589829, 589827, 3, 655365, 589827, 4, 131078, 655363, 4, 196614, 655363, 1, 262150, 655363, 2, 327686, 655363, 3, 393222, 655363, 4, 458758, 655363, 1, 524294, 655363, 2, 589830, 655363, 3, 655366, 655363, 4, 720902, 655363, 1, 131079, 720899, 4, 196615, 720899, 1, 262151, 720899, 2, 524295, 720899, 2, 589831, 720899, 3, 655367, 720899, 4, 720903, 720899, 1, 131080, 786435, 4, 196616, 786435, 1, 262152, 786435, 2, 524296, 786435, 2, 589832, 786435, 3, 655368, 786435, 4, 720904, 786435, 1, 131081, 589827, 4, 196617, 589827, 1, 524297, 589827, 2, 589833, 589827, 3, 655369, 589827, 4, 720905, 589827, 1, 524298, 655363, 2, 589834, 655363, 3, 655370, 655363, 4, 720906, 655363, 1, 327682, 655363, 3, 393218, 655363, 4, 458754, 655363, 1, 524290, 655363, 2, 589826, 655363, 3, 655362, 655363, 4, 720898, 655363, 1, 786434, 655363, 2, 131075, 720899, 4, 196611, 720899, 1, 262147, 720899, 2, 327683, 720899, 3, 393219, 720899, 4, 458755, 720899, 1, 524291, 720899, 2, 589827, 720899, 3, 655363, 720899, 4, 720899, 720899, 1, 786435, 720899, 2, 786436, 786435, 2, 786437, 589827, 2, 786438, 655363, 2, 786439, 720899, 2, 786440, 786435, 2, 262153, 589827, 2, 786441, 589827, 2, 786442, 655363, 2, 720901, 589827, 1, 196618, 655363, 1, 131082, 655363, 4, 327690, 655363, 3, 262154, 655363, 2, 65539, 720899, 3, 65540, 786435, 3, 65541, 589827, 3, 65542, 655363, 3, 65543, 720899, 3, 65544, 786435, 3, 65545, 589827, 3, 65546, 655363, 3, 65538, 655363, 3, 327687, 720899, 3, 327688, 786435, 3, 327689, 589827, 3, 131074, 655363, 4, 196610, 655363, 1, 262146, 655363, 2, 65536, 786435, 3, 131072, 786435, 4, 196608, 786435, 1, 262144, 786435, 2, 65537, 589827, 3, 131073, 589827, 4, 196609, 589827, 1, 262145, 589827, 2, 327680, 786435, 3, 393216, 786435, 4, 458752, 786435, 1, 524288, 786435, 2, 327681, 589827, 3, 393217, 589827, 4, 458753, 589827, 1, 524289, 589827, 2, 589824, 786435, 3, 655360, 786435, 4, 720896, 786435, 1, 786432, 786435, 2, 589825, 589827, 3, 655361, 589827, 4, 720897, 589827, 1, 786433, 589827, 2, 851968, 786435, 3, 917504, 786435, 4, 983040, 786435, 1, 851969, 589827, 3, 917505, 589827, 4, 983041, 589827, 1, 851970, 655363, 3, 917506, 655363, 4, 983042, 655363, 1, 851971, 720899, 3, 917507, 720899, 4, 983043, 720899, 1, 393223, 720899, 4, 458759, 720899, 1, 851972, 786435, 3, 917508, 786435, 4, 983044, 786435, 1, 851973, 589827, 3, 917509, 589827, 4, 983045, 589827, 1, 851974, 655363, 3, 917510, 655363, 4, 983046, 655363, 1, 851975, 720899, 3, 917511, 720899, 4, 983047, 720899, 1, 65547, 720899, 3, 131083, 720899, 4, 196619, 720899, 1, 262155, 720899, 2, 393224, 786435, 4, 458760, 786435, 1, 393225, 589827, 4, 458761, 589827, 1, 393226, 655363, 4, 458762, 655363, 1, 327691, 720899, 3, 393227, 720899, 4, 458763, 720899, 1, 524299, 720899, 2, 589835, 720899, 3, 655371, 720899, 4, 720907, 720899, 1, 786443, 720899, 2, 851976, 786435, 3, 917512, 786435, 4, 983048, 786435, 1, 851977, 589827, 3, 917513, 589827, 4, 983049, 589827, 1, 851978, 655363, 3, 917514, 655363, 4, 983050, 655363, 1, 851979, 720899, 3, 917515, 720899, 4, 983051, 720899, 1, 65548, 786435, 3, 131084, 786435, 4, 196620, 786435, 1, 262156, 786435, 2, 65549, 589827, 3, 131085, 589827, 4, 196621, 589827, 1, 262157, 589827, 2, 65550, 655363, 3, 131086, 655363, 4, 196622, 655363, 1, 262158, 655363, 2, 65551, 720899, 3, 131087, 720899, 4, 196623, 720899, 1, 262159, 720899, 2, 327692, 786435, 3, 393228, 786435, 4, 458764, 786435, 1, 524300, 786435, 2, 327693, 589827, 3, 393229, 589827, 4, 458765, 589827, 1, 524301, 589827, 2, 327694, 655363, 3, 393230, 655363, 4, 458766, 655363, 1, 524302, 655363, 2, 327695, 720899, 3, 393231, 720899, 4, 458767, 720899, 1, 524303, 720899, 2, 589836, 786435, 3, 655372, 786435, 4, 720908, 786435, 1, 786444, 786435, 2, 589837, 589827, 3, 655373, 589827, 4, 720909, 589827, 1, 786445, 589827, 2, 589838, 655363, 3, 655374, 655363, 4, 720910, 655363, 1, 786446, 655363, 2, 589839, 720899, 3, 655375, 720899, 4, 720911, 720899, 1, 786447, 720899, 2, 851980, 786435, 3, 917516, 786435, 4, 983052, 786435, 1, 851981, 589827, 3, 917517, 589827, 4, 983053, 589827, 1, 851982, 655363, 3, 917518, 655363, 4, 983054, 655363, 1, 851983, 720899, 3, 917519, 720899, 4, 983055, 720899, 1, -3, 589827, 1, 65533, 589827, 2, 131069, 589827, 3, 196605, 589827, 4, -2, 655363, 1, 65534, 655363, 2, 131070, 655363, 3, 196606, 655363, 4, -1, 720899, 1, 65535, 720899, 2, 131071, 720899, 3, 196607, 720899, 4, -65536, 786435, 1, 0, 786435, 2, 262141, 589827, 1, 327677, 589827, 2, 393213, 589827, 3, 458749, 589827, 4, 262142, 655363, 1, 327678, 655363, 2, 393214, 655363, 3, 458750, 655363, 4, 262143, 720899, 1, 327679, 720899, 2, 393215, 720899, 3, 458751, 720899, 4, 524285, 589827, 1, 589821, 589827, 2, 655357, 589827, 3, 720893, 589827, 4, 524286, 655363, 1, 589822, 655363, 2, 655358, 655363, 3, 720894, 655363, 4, 524287, 720899, 1, 589823, 720899, 2, 655359, 720899, 3, 720895, 720899, 4, 786429, 589827, 1, 851965, 589827, 2, 917501, 589827, 3, 983037, 589827, 4, 786430, 655363, 1, 851966, 655363, 2, 917502, 655363, 3, 983038, 655363, 4, 786431, 720899, 1, 851967, 720899, 2, 917503, 720899, 3, 983039, 720899, 4, 1048573, 589827, 1, 1114109, 589827, 2, 1048574, 655363, 1, 1114110, 655363, 2, 1048575, 720899, 1, 1114111, 720899, 2, 1048576, 786435, 2, -65535, 589827, 1, 1, 589827, 2, -65534, 655363, 1, 2, 655363, 2, -65533, 720899, 1, 3, 720899, 2, -65532, 786435, 1, 4, 786435, 2, 1048577, 589827, 2, 1048578, 655363, 2, 1048579, 720899, 2, 1048580, 786435, 2, -65531, 589827, 1, 5, 589827, 2, -65530, 655363, 1, 6, 655363, 2, -65529, 720899, 1, 7, 720899, 2, -65528, 786435, 1, 8, 786435, 2, 1048581, 589827, 2, 1048582, 655363, 2, 1048583, 720899, 2, 1048584, 786435, 2, -65527, 589827, 1, 9, 589827, 2, -65526, 655363, 1, 10, 655363, 2, -65525, 720899, 1, 11, 720899, 2, -65524, 786435, 1, 12, 786435, 2, 1048585, 589827, 2, 1048586, 655363, 2, 1048587, 720899, 2, 1048588, 786435, 2, -65523, 589827, 1, 13, 589827, 2, -65522, 655363, 1, 14, 655363, 2, -65521, 720899, 1, 15, 720899, 2, -65520, 786435, 1, 16, 786435, 2, 65552, 786435, 3, 131088, 786435, 4, 196624, 786435, 1, 262160, 786435, 2, 327696, 786435, 3, 393232, 786435, 4, 458768, 786435, 1, 524304, 786435, 2, 589840, 786435, 3, 655376, 786435, 4, 720912, 786435, 1, 786448, 786435, 2, 851984, 786435, 3, 917520, 786435, 4, 1048589, 589827, 2, 1048590, 655363, 2, 1048591, 720899, 2, 983056, 786435, 1, 1048592, 786435, 2, -65519, 589827, 1, 17, 589827, 2, 65553, 589827, 3, 131089, 589827, 4, -65518, 655363, 1, 18, 655363, 2, 65554, 655363, 3, 131090, 655363, 4, -65517, 720899, 1, 19, 720899, 2, 65555, 720899, 3, 131091, 720899, 4, 196625, 589827, 1, 262161, 589827, 2, 327697, 589827, 3, 393233, 589827, 4, 196626, 655363, 1, 262162, 655363, 2, 327698, 655363, 3, 393234, 655363, 4, 196627, 720899, 1, 262163, 720899, 2, 327699, 720899, 3, 393235, 720899, 4, 458769, 589827, 1, 524305, 589827, 2, 589841, 589827, 3, 655377, 589827, 4, 458770, 655363, 1, 524306, 655363, 2, 589842, 655363, 3, 655378, 655363, 4, 458771, 720899, 1, 524307, 720899, 2, 589843, 720899, 3, 655379, 720899, 4, 720913, 589827, 1, 786449, 589827, 2, 851985, 589827, 3, 917521, 589827, 4, 720914, 655363, 1, 786450, 655363, 2, 851986, 655363, 3, 917522, 655363, 4, 720915, 720899, 1, 786451, 720899, 2, 851987, 720899, 3, 917523, 720899, 4, 983057, 589827, 1, 1048593, 589827, 2, 983058, 655363, 1, 1048594, 655363, 2, 983059, 720899, 1, 1048595, 720899, 2)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Don't Push me"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play"
script = ExtResource("2_7f7bd")

[node name="Instructions" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Instructions"
script = ExtResource("2_7f7bd")

[node name="Exit" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"
script = ExtResource("2_7f7bd")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Back" type="Label" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"
script = ExtResource("2_7f7bd")

[node name="Instructions" type="Node2D" parent="PanelContainer/VBoxContainer2"]
top_level = true

[node name="Move" type="Node2D" parent="PanelContainer/VBoxContainer2/Instructions"]
top_level = true

[node name="Move" type="Label" parent="PanelContainer/VBoxContainer2/Instructions/Move"]
anchors_preset = -1
anchor_left = -2.568
anchor_right = -2.568
offset_left = 707.68
offset_top = 96.0
offset_right = 750.68
offset_bottom = 119.0
text = "Move"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer2/Instructions/Move"]
position = Vector2(32, 154)
texture = ExtResource("4_mg7x7")

[node name="Up" type="Sprite2D" parent="PanelContainer/VBoxContainer2/Instructions/Move"]
position = Vector2(88, 144)
texture = ExtResource("5_b48hc")

[node name="Down" type="Sprite2D" parent="PanelContainer/VBoxContainer2/Instructions/Move"]
position = Vector2(88, 160)
texture = ExtResource("6_1j7c7")

[node name="Left" type="Sprite2D" parent="PanelContainer/VBoxContainer2/Instructions/Move"]
position = Vector2(73, 160)
texture = ExtResource("7_47ekk")

[node name="Right" type="Sprite2D" parent="PanelContainer/VBoxContainer2/Instructions/Move"]
position = Vector2(104, 160)
texture = ExtResource("8_7gyq4")

[node name="Don\'t" type="Node2D" parent="PanelContainer/VBoxContainer2/Instructions"]
top_level = true

[node name="Don\'t" type="Label" parent="PanelContainer/VBoxContainer2/Instructions/Don\'t"]
offset_left = 167.0
offset_top = 96.0
offset_right = 209.0
offset_bottom = 119.0
text = "Don't"

[node name="Don\'t Instructions" type="Label" parent="PanelContainer/VBoxContainer2/Instructions/Don\'t"]
offset_left = 120.0
offset_top = 118.0
offset_right = 256.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 10
text = "Avoid standing in front of 
or touching the cats."
horizontal_alignment = 1
justification_flags = 35

[node name="next_step_indicator" parent="PanelContainer/VBoxContainer2/Instructions/Don\'t" instance=ExtResource("9_h56ag")]
position = Vector2(180, 162)

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer2/Instructions/Don\'t"]
position = Vector2(197, 158)
texture = ExtResource("10_6dfsk")
hframes = 8
vframes = 36

[node name="menu_cursor" parent="." instance=ExtResource("1_bvyhp")]
layout_mode = 0
menu_parent_path = NodePath("../PanelContainer/VBoxContainer")

[connection signal="gui_input" from="PanelContainer" to="menu_cursor" method="_on_panel_container_gui_input"]
[connection signal="cursor_selected" from="PanelContainer/VBoxContainer/Play" to="menu_cursor" method="_on_play_cursor_selected"]
[connection signal="cursor_selected" from="PanelContainer/VBoxContainer/Instructions" to="." method="_on_instructions_cursor_selected"]
[connection signal="cursor_selected" from="PanelContainer/VBoxContainer/Instructions" to="menu_cursor" method="_on_instructions_cursor_selected"]
[connection signal="cursor_selected" from="PanelContainer/VBoxContainer/Exit" to="menu_cursor" method="_on_exit_cursor_selected"]
[connection signal="cursor_selected" from="PanelContainer/VBoxContainer2/Back" to="." method="_on_back_cursor_selected"]
